--- a/.github/workflows/BackEndCICD.yml
+++ b/.github/workflows/BackEndCICD.yml
@@ -1,126 +1,29 @@
 name: 00 USA BackEnd Nestjs
 
 on:
-  #  push:
-  #    branches:
-  #      - main
-  workflow_dispatch:
+  workflow_call: # 允许被其他工作流调用
+    inputs:
+      environment:
+        required: true
+        type: string
+      app_name:
+        required: true
+        type: string
+    secrets:
+      DEPLOY_TOKEN:
+        required: true
 
 env:
   PROJECT_NAME: nestjs001
 
 jobs:
-  build-app:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 22
-
-      - name: Build Application
+      - name: Deploy application
         run: |
-          echo "Local files:"
-          ls -la
-          mkdir -p artifacts
-
-          echo "Copying files to artifacts directory..."
-          cd BE
-          cp .env ../artifacts/.env  
-          mv .env ../artifacts/my_env  # 将 .env 重命名为 my_env
-          rsync -av --progress --exclude='artifacts' . ../artifacts/
-          echo "Files in artifacts 0:"
-          ls -la ../artifacts/
-
-      - name: Archive artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-artifacts
-          path: |
-            artifacts
-          retention-days: 1
-        env:
-          ACTIONS_STEP_DEBUG: true
-
-  build-image:
-    runs-on: ubuntu-latest
-    needs: build-app
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: app-artifacts
-          path: artifacts
-        env:
-          ACTIONS_STEP_DEBUG: true
-
-      - name: Check artifacts
-        run: |
-          echo "Check artifacts..."
-          find artifacts -name ".env"  # 使用 find 命令进行更广泛的搜索
-          echo "Files in artifacts 0:"
-          ls -la
-          ls -la artifacts
-
-      - name: Build Docker image
-        run: |
-          cd artifacts
-          echo "Build Docker image...1"
-          mv my_env .env
-          echo "Build Docker image...2"
-          ls -la
-          docker buildx build -t $PROJECT_NAME .
-
-      - name: Push DockerImage to Docker Hub
-        run: |
-          docker login -u ${{secrets.DOCKERHUB_USR}} -p ${{secrets.DOCKERHUB_PWD}}
-          docker tag $PROJECT_NAME ${{secrets.DOCKERHUB_USR}}/$PROJECT_NAME:latest
-          docker push ${{secrets.DOCKERHUB_USR}}/$PROJECT_NAME:latest
-
-  delete-artifacts:
-    runs-on: ubuntu-latest
-    needs: build-image
-    steps:
-      - uses: geekyeggo/delete-artifact@v5
-        with:
-          name: app-artifacts
-
-  deploy-image:
-    runs-on: ubuntu-latest
-    needs: build-image
-    env:
-      PROJECT_NAME: nestjs001
-      HTTPS_PORT: "9801:9801"
-      TCP_PORT: "3001:3001"
-      UDP_PORT: "3002:3002"
-      SERVER_HOST: usa.dreams-studio.com
-      SERVER_USER: root
-      SERVER_POST: 22
-    steps:
-      - name: Deploy Docker image to ${{env.SERVER_HOST}}
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{env.SERVER_HOST}}
-          port: ${{env.SERVER_POST}}
-          username: ${{env.SERVER_USER}}
-          key: ${{ secrets.SSH_PRIVATE_KEY_TX }}
-          script: |
-            echo "Executing command on remote server..."
-            docker images
-            docker rm -f ${{env.PROJECT_NAME}} || true
-            docker rmi ${{secrets.DOCKERHUB_USR}}/${{env.PROJECT_NAME}}:latest || true
-            docker pull ${{secrets.DOCKERHUB_USR}}/${{env.PROJECT_NAME}}:latest || true
-            docker run -idt \
-            --name ${{env.PROJECT_NAME}} \
-            --restart always \
-            -p ${{env.HTTPS_PORT}} \
-            -p ${{env.TCP_PORT}} \
-            -p ${{env.UDP_PORT}} \
-            -v /root/docker/certbot/etc/letsencrypt:/etc/letsencrypt:ro \
-            -e NODE_ENV=production \
-            -e CERT_PATH=/etc/letsencrypt/live/usa.dreams-studio.com \
-            -v /root/docker/nestjs001/logs:/app/logs \
-            ${{secrets.DOCKERHUB_USR}}/${{env.PROJECT_NAME}}:latest
+          echo "Deploying ${{ inputs.app_name }} to ${{ inputs.environment }}"
+          echo "Using token: ${{ secrets.DEPLOY_TOKEN }}"
