--- a/.github/workflows/BackEndCICD.yml
+++ b/.github/workflows/BackEndCICD.yml
@@ -21,9 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.CICD_TOKEN }}
 
       - name: Deploy application
         run: |
           echo "Deploying ${{ inputs.app_name }} to ${{ inputs.environment }}"
           echo "Using token: ${{ secrets.DEPLOY_TOKEN }}"
+          echo "Using token CICD: ${{ secrets.CICD_TOKEN }}"
