--- a/.github/workflows/SLK_deploy_be.yml
+++ b/.github/workflows/SLK_deploy_be.yml
@@ -85,7 +85,7 @@ jobs:
 
   build-image:
     runs-on: ubuntu-latest
-    needs: build-app
+    needs: prepare-deploy
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -129,13 +129,6 @@ jobs:
   deploy-image:
     runs-on: ubuntu-latest
     needs: build-image
-    env:
-      HTTPS_PORT: "9801:9801"
-      TCP_PORT: "3001:3001"
-      UDP_PORT: "3002:3002"
-      SERVER_HOST: usa.dreams-studio.com
-      SERVER_USER: root
-      SERVER_POST: 22
     steps:
       - name: Deploy Docker image to ${{inputs.SERVER_HOST}}
         uses: appleboy/ssh-action@master
