--- a/.github/workflows/SLK_deploy_fe.yml
+++ b/.github/workflows/SLK_deploy_fe.yml
@@ -104,7 +104,7 @@ jobs:
         run: |
           cd artifacts
           ls -l          
-          docker buildx build -t $PROJECT_NAME .
+          docker buildx build -t ${{inputs.app_name}} .
 
       - name: Push DockerImage to Docker Hub
         run: |
