--- a/.github/workflows/01_DDNS.yml
+++ b/.github/workflows/01_DDNS.yml
@@ -1,12 +1,11 @@
 name: Build Obfuscate BPB Panel
 
 on:
-  workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
-  # schedule:
-  # - cron: "0 6 * * *"
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "0 1 * * *"
 
 permissions:
   contents: write
